--- a/frontend/scss/pages/_p-issuearticle-show.scss
+++ b/frontend/scss/pages/_p-issuearticle-show.scss
@@ -259,8 +259,4 @@ Styling related specifically to digital publications
   .o-blocks > h2:not([class*=f-]) {
     margin-top: 20px;
   }
-
-  .o-blocks.o-blocks--with-sidebar .o-gallery::before {
-    left: 1px;
-  }
 }
